[package]
name = "ratchet-x2"
license = "MIT"
version = "0.1.1"
edition = "2021"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]
categories = ["cryptography"]
keywords = ["crypto", "cryptography", "double-ratchet"]
description = "Pure Rust Double Ratchet protocol implementation"
repository = "https://github.com/alexyer/ratchet-x2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptimitives = { version = "0.10.0", features = [], optional = true }
cryptraits = { version = "0.5.0", features = [] }
rand_core = { version = "0.6.3", features = [] }

[features]
default = ["std", "cryptimitives"]
std = ["cryptimitives/std", "cryptraits/std", "rand_core/std"]