[package]
name = "ratchet-x2"
license = "MIT"
version = "0.2.4"
edition = "2021"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]
categories = ["cryptography"]
keywords = ["crypto", "cryptography", "double-ratchet"]
description = "Pure Rust Double Ratchet protocol implementation"
repository = "https://github.com/alexyer/ratchet-x2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptimitives = { version = "0.17.0", features = [], optional = true }
cryptraits = { version = "0.13.0", features = [] }
rand_core = { version = "0.6.3", features = [] }
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_json = { version = "1.0.93", optional = true}

[features]
default = ["std", "cryptimitives", "serde_derive"]
std = ["cryptimitives/std", "cryptraits/std", "rand_core/std"]
serde_derive = ["serde", "serde_json", "cryptimitives/serde_derive"]
